grayscale filter added to photobox. fix issue on firefox, removeEventListener need more args

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -153,7 +153,21 @@ html {
 				width: auto;
 				height: 100%;
 				transform-origin: center center;
-				@include transition(transform 0.3s);
+				@include transition(transform 0.3s filter 0.3s);
+
+				filter: grayscale(0.9);
+				-webkit-filter: grayscale(0.9);
+				-moz-filter: grayscale(0.9);
+				-ms-filter: grayscale(0.9);
+			}
+
+			&:hover {
+				img {
+					filter: grayscale(0);
+					-webkit-filter: grayscale(0);
+					-moz-filter: grayscale(0);
+					-ms-filter: grayscale(0);
+				}
 			}
 		}
 
